[gd_scene load_steps=3 format=2]

[ext_resource path="res://live2d/point.tres" type="Shape2D" id=1]
[ext_resource path="res://live2d/point.gd" type="Script" id=2]

[node name="point" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[connection signal="input_event" from="." to="." method="_on_point_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_point_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_point_mouse_exited"]
